cmake_minimum_required(VERSION 3.6)
project(SolveSet)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    aizu1313/aizu1313/Source.cpp
    asmtester/asmtester/Source.cpp
    BestCoder731A/BestCoder731A/OJtemplate.cpp
    BestCoder731B/BestCoder731B/OJtemplate.cpp
    biparticle/biparticle/Source.cpp
    c719B/源.cpp
    C720A/C720A/源.cpp
    C720E/C720E/源.cpp
    C720F/C720F/源.cpp
    C720G/C720G/源.cpp
    C723A/源.cpp
    C723B/源.cpp
    C723C/源.cpp
    C723D/源.cpp
    C723E/源.cpp
    C725A/C725A/源.cpp
    C725B/C725B/源.cpp
    C725C/C725C/源.cpp
    C725D/C725D/源.cpp
    C725E/C725E/源.cpp
    C725F/C725F/源.cpp
    C725G/C725G/源.cpp
    C725H/C725H/源.cpp
    C725H/源.cpp
    C727A/C727A/源.cpp
    C727B/C727B/源.cpp
    C727C/C727C/源.cpp
    C727D/C727D/源.cpp
    C727E/C727E/源.cpp
    C727F/C727F/源.cpp
    cf363d/cf363d/Source.cpp
    cf383A/cf383A/Source.cpp
    cf383B/cf383B/Source.cpp
    cf383C/cf383C/Source.cpp
    cf383E/cf383E/Source.cpp
    cf471d/cf471d/Source.cpp
    cf499c/cf499c/Source.cpp
    cf691A/源.cpp
    cf691B/源.cpp
    cf697A/cf697A/源.cpp
    cf697B/cf697B/源.cpp
    cf697C/cf697C/源.cpp
    cf697C/源.cpp
    cf722a/cf722a/Source.cpp
    cf722B/cf722B/Source.cpp
    cf722C/cf722C/Source.cpp
    cf722d/cf722d/Source.cpp
    cf725A/cf725A/Source.cpp
    cf730A/cf730A/Source.cpp
    cf735a/cf735a/Source.cpp
    cf735B/cf735B/Source.cpp
    cf735C/cf735C/Source.cpp
    cf735D/cf735D/Source.cpp
    cf735E/cf735E/OJtemplate.cpp
    cf741A/cf741A/OJtemplate.cpp
    CF742D/CF742D/OJtemplate.cpp
    CF742E/CF742E/OJtemplate.cpp
    cf743A/cf743A/OJtemplate.cpp
    cf743B/cf743B/OJtemplate.cpp
    cf743C/cf743C/OJtemplate.cpp
    cf743D/cf743D/OJtemplate.cpp
    cf743E/cf743E/OJtemplate.cpp
    cf744A/cf744A/OJtemplate.cpp
    cf744B/cf744B/OJtemplate.cpp
    cf745C/cf745C/OJtemplate.cpp
    cf745D/cf745D/OJtemplate.cpp
    cf746A/cf746A/OJtemplate.cpp
    cf746B/cf746B/OJtemplate.cpp
    cf746C/cf746C/OJtemplate.cpp
    cf746D/cf746D/OJtemplate.cpp
    cf746E/cf746E/OJtemplate.cpp
    cf746G/cf746G/OJtemplate.cpp
    cf747A/cf747A/OJtemplate.cpp
    cf747B/cf747B/OJtemplate.cpp
    cf747C/cf747C/OJtemplate.cpp
    cf747D/cf747D/OJtemplate.cpp
    cf747E/cf747E/OJtemplate.cpp
    cf747F/cf747F/OJtemplate.cpp
    cf749A/cf749A/OJtemplate.cpp
    cf749B/cf749B/OJtemplate.cpp
    cf749C/cf749C/OJtemplate.cpp
    cf749D/cf749D/OJtemplate.cpp
    "China Final 测试文件/A/A.cpp"
    "China Final 测试文件/B/B.cpp"
    "China Final 测试文件/B/chinafinalreviewb.cpp"
    "China Final 测试文件/C/C.cpp"
    "China Final 测试文件/C/chinafinalreviewc.cpp"
    "China Final 测试文件/D/chinafinalreviewd.cpp"
    "China Final 测试文件/D/D.cpp"
    "China Final 测试文件/E/chinafinalreviewe.cpp"
    "China Final 测试文件/E/E.cpp"
    "China Final 测试文件/F/chinafinalreviewf.cpp"
    "China Final 测试文件/F/F.cpp"
    ChinafinalH/ChinafinalH/OJtemplate.cpp
    chronooo/chronooo/Source.cpp
    Coin2/Coin2/源.cpp
    ColorFlood/ColorFlood/Source.cpp
    comps/comps/Source.cpp
    conF/conF/Source.cpp
    consG/consG/Source.cpp
    consL/consL/Source.cpp
    contA/contA/Source.cpp
    contE/contE/Source.cpp
    Dalian1010/Dalian1010/Source.cpp
    debugpoj1273/main.cpp
    dijkstra1/dijkstra1/源.cpp
    discretization/discretization/Source.cpp
    EC2015A/EC2015A/OJtemplate.cpp
    EC2015B/EC2015B/OJtemplate.cpp
    EC2015B/EC2015B/Source.cpp
    EightDigit/源.cpp
    fzu1686/fzu1686/Source.cpp
    gauss_fomula/gauss_fomula/Source.cpp
    Grundy1/Grundy1/源.cpp
    hdu1024/hdu1024/Source.cpp
    hdu1043/hdu1043/Source.cpp
    hdu1043/hdu1043/Source1.cpp
    hdu1083/hdu1083/Source.cpp
    hdu1181/hdu1181/源.cpp
    hdu1233/hdu1233/源.cpp
    hdu1233.2/hdu1233.2/源.cpp
    hdu1285/源.cpp
    hdu1495/hdu1495/Source.cpp
    hdu1517/hdu1517/源.cpp
    hdu1536/hdu1536/源.cpp
    hdu1668/hdu1668/Source.cpp
    hdu1730/hdu1730/源.cpp
    hdu1847/hdu1847/Source.cpp
    hdu1850/hdu1850/源.cpp
    hdu1863/hdu1863/源.cpp
    hdu1874/hdu1874/源.cpp
    hdu1875/hdu1875/源.cpp
    hdu1875/源.cpp
    hdu1879/hdu1879/源.cpp
    hdu2222/hdu2222/OJtemplate.cpp
    hdu2295/hdu2295/Source.cpp
    hdu2612/hdu2612/源.cpp
    hdu3.3.18/源.cpp
    hdu3879/hdu3879/Source.cpp
    hdu4007/hdu4007/Source.cpp
    hdu4370/hdu4370/Source.cpp
    hdu4770/hdu4770/Source.cpp
    hdu5070/hdu5070/Source.cpp
    hdu5112/hdu5112/Source.cpp
    hdu5870/hdu5870/Source.cpp
    hdu5875/hdu5875/Source.cpp
    hdu5876/hdu5876/Source.cpp
    hduacm4.1.2/hduacm4.1.2/Source.cpp
    hiho1032/hiho1032/OJtemplate.cpp
    hiho1036/hiho1036/OJtemplate.cpp
    hiho1038/hiho1038/OJtemplate.cpp
    hiho1043/hiho1043/OJtemplate.cpp
    hiho1044/hiho1044/OJtemplate.cpp
    hiho1048/hiho1048/OJtemplate.cpp
    hust1017/hust1017/Source.cpp
    hust1578/hust1578/Source.cpp
    hust1622/hust1622/Source.cpp
    HYSBZ3229/HYSBZ3229/OJtemplate.cpp
    isap/isap/Source.cpp
    LA3523/LA3523/Source.cpp
    la4255/la4255/Source.cpp
    LA5135/LA5135/Source.cpp
    lanqiaoC/lanqiaoC/Source.cpp
    lanqiaoD/lanqiaoD/Source.cpp
    LC1/LC1/源.cpp
    LC125/LC125/源.cpp
    LC128/LC128/源.cpp
    LC134/LC134/源.cpp
    LC135/LC135/源.cpp
    lc136/lc136/源.cpp
    LC16/LC16/源.cpp
    LC18/LC18/源.cpp
    LC2/LC2/源.cpp
    LC22/LC22/源.cpp
    LC27/LC27/源.cpp
    LC282/LC282/源.cpp
    LC31/LC31/源.cpp
    LC34/LC34/源.cpp
    LC36/LC36/源.cpp
    LC37/LC37/源.cpp
    LC39/LC39/源.cpp
    LC40/LC40/源.cpp
    LC42/LC42/源.cpp
    LC48/LC48/源.cpp
    LC60/LC60/源.cpp
    LC66/LC66/源.cpp
    LC70/LC70/源.cpp
    LC73/LC73/源.cpp
    LC79/LC79/源.cpp
    LC89/LC89/源.cpp
    LC92/LC92/源.cpp
    LC93/LC93/源.cpp
    matrix/matrix/Source.cpp
    mcmf/mcmf/Source.cpp
    multi_vector/multi_vector/Source.cpp
    mvec_test/cool_vec.hpp
    mvec_test/main.cpp
    mvec_test/point.h
    mvec_test/tstring.cpp
    nim/nim/源.cpp
    pacman/jsoncpp/json-forwards.h
    pacman/jsoncpp/json.h
    pacman/jsoncpp.cpp
    pacman/nov_parser.cpp
    pacman/paxman.cpp
    "poj 276/poj 276/Source.cpp"
    poj1084/poj1084/Source.cpp
    poj1087/poj1087/Source.cpp
    poj1149/poj1149/Source.cpp
    poj1160/poj1160/OJtemplate.cpp
    poj1160_int_dp/poj1160_int_dp/OJtemplate.cpp
    poj1185/poj1185/Source.cpp
    poj1201/poj1201/Source.cpp
    poj1222/poj1222/OJtemplate.cpp
    poj1258/poj1258/Source.cpp
    poj1258/poj1258/源.cpp
    poj1273/poj1273/Source.cpp
    poj1276/poj1276/Source.cpp
    poj1363/源.cpp
    poj1426/poj1426/Source.cpp
    poj1426/poj1426/Source1.cpp
    POJ1459/POJ1459/Source.cpp
    poj1502/poj1502/Source.cpp
    poj1704/poj1704/源.cpp
    poj2104/poj2104/Source.cpp
    poj2104/poj2104/Source1.cpp
    poj2154/poj2154/OJtemplate.cpp
    poj2159/poj2159/OJtemplate.cpp
    poj2187/poj2187/Source.cpp
    poj2251/poj2251/源.cpp
    poj2253/poj2253/Source.cpp
    poj2311/poj2311/源.cpp
    poj2342/poj2342/OJtemplate.cpp
    poj2348/poj2348/源.cpp
    poj2409/poj2409/OJtemplate.cpp
    poj2411/poj2411/Source.cpp
    poj2663/poj2663/Source.cpp
    poj2728/poj2728/Source.cpp
    poj2763/poj2763/Source.cpp
    poj2976/poj2976/Source.cpp
    poj2983/poj2983/Source.cpp
    poj2991/poj2991/Source.cpp
    poj3057/poj3057/Source.cpp
    poj3061/poj3061/Source.cpp
    poj3074/poj3074/Source.cpp
    poj3087/poj3087/Source.cpp
    poj3111/poj3111/Source.cpp
    poj3155/poj3155/Source.cpp
    poj3254/poj3254/Source.cpp
    poj3278/poj3278/源.cpp
    poj3279/poj3279/Source.cpp
    poj3281/poj3281/Source.cpp
    poj3308/poj3308/OJtemplate.cpp
    poj3414/poj3414/源.cpp
    poj3426/poj3426/Source.cpp
    poj3436/poj3436/Source.cpp
    poj3480/poj3480/源.cpp
    poj3660/poj3660/Source.cpp
    poj3684/poj3684/Source.cpp
    poj3686/poj3686/Source.cpp
    poj3709/poj3709/Source.cpp
    poj3984/poj3984/源.cpp
    Project1/Project1/Source.cpp
    resourcetest/resourcetest/Source.cpp
    rmq/rmq/Source.cpp
    segtree/segtree/Source.cpp
    sfta/sfta/Source.cpp
    shu1070/shu1070/OJtemplate.cpp
    shu1072/shu1072/OJtemplate.cpp
    shu1175A/shu1175A/Source.cpp
    shu1175B/shu1175B/Source.cpp
    shu1175C/shu1175C/Source.cpp
    shu1175D/shu1175D/Source.cpp
    shu1175E/shu1175E/Source.cpp
    shu1175F/shu1175F/Source.cpp
    shu1175G/shu1175G/Source.cpp
    shu1175H/shu1175H/Source.cpp
    shu1175I/shu1175I/Source.cpp
    shu1175J/shu1175J/Source.cpp
    shu1175K/shu1175K/Source.cpp
    shu1176A/shu1176A/Source.cpp
    shu1176B/shu1176B/Source.cpp
    shu1203/shu1203/OJtemplate.cpp
    shu1206/shu1206/OJtemplate.cpp
    shu1693/shu1693/OJtemplate.cpp
    shu1832/shu1832/OJtemplate.cpp
    shu1833/shu1833/OJtemplate.cpp
    shu1844/shu1844/OJtemplate.cpp
    shu1868/shu1868/OJtemplate.cpp
    shu1901/shu1901/Source.cpp
    shu1907/shu1907/Source.cpp
    shu1908/shu1908/OJtemplate.cpp
    shu1923/shu1923/源.cpp
    shu1924/shu1924/源.cpp
    shu1925/shu1925/源.cpp
    shu1926/shu1926/源.cpp
    shu1927/shu1927/源.cpp
    shu1928/shu1928/源.cpp
    shu2007/shu2007/Source.cpp
    "spoj frequent/spoj frequent/Source.cpp"
    spoj1182/spoj1182/OJtemplate.cpp
    stackoverflow/main.cpp
    STL/STL/alloc.h
    STL/STL/Source.cpp
    templetes/bcc.cpp
    templetes/BIT.cpp
    templetes/dancing_link.cpp
    templetes/dijkstra.cpp
    templetes/dinic.cpp
    templetes/disjointset.cpp
    templetes/euler_phi.cpp
    templetes/iscur.cpp
    templetes/iscut.cpp
    templetes/kruskal.cpp
    templetes/LCA.cpp
    templetes/maxflow.cpp
    templetes/mcm.cpp
    templetes/mcmf.cpp
    templetes/mincut.cpp
    templetes/multi_Vector.cpp
    templetes/poj1426.cpp
    templetes/prim.cpp
    templetes/pushrelabel.cpp
    templetes/rmq.cpp
    templetes/rmq2.cpp
    templetes/seg_tree.cpp
    templetes/spfa.cpp
    templetes/templates_fmt.cpp
    templetes/x.cpp
    test/test/Source.cpp
    ural1057/ural1057/OJtemplate.cpp
    uva10047/uva10047/Source.cpp
    uva10129/源.cpp
    uva1025/uva1025/Source.cpp
    uva10735/uva10735/Source.cpp
    uva10820/uva10820/Source.cpp
    uva10976/源.cpp
    uva11082/uva11082/Source.cpp
    uva1149/uva1149/Source.cpp
    uva116/uva116/Source.cpp
    uva11624/uva11624/Source.cpp
    uva12238/uva12238/Source.cpp
    uva12716/uva12716/Source.cpp
    uva1349/uva1349/Source.cpp
    uva1515/uva1515/Source.cpp
    uva1599/Debug/test1.cpp
    uva1599/源.cpp
    uva1610/uva1610/Source.cpp
    uva1635/uva1635/Source.cpp
    uva1658/uva1658/Source.cpp
    uva1659/uva1659/Source.cpp
    uva221/源.cpp
    uva437/uva437/Source.cpp
    uva49096/uva49096/Source.cpp
    uva580/uva580/Source.cpp
    uva753/uva753/Source.cpp
    zoj2341/zoj2341/Source.cpp
    zoj3209/zoj3209/Source.cpp
    zxt01/zxt01/Source.cpp
    a.cpp
    a2.cpp
    aizu1258.cpp
    aoj2308.cpp
    b.cpp
    c1001.cpp
    c1002.cpp
    c1005.cpp
    c1006.cpp
    c1007.cpp
    c1009.cpp
    c1012.cpp
    c109.c
    C729C.cpp
    C81A.cpp
    C81B.cpp
    C81C.cpp
    ccf1A.cpp
    ccf1B.cpp
    ccf1C.cpp
    cf381d.cpp
    CF702.cpp
    CF702A.cpp
    CF702B.cpp
    CF702C.cpp
    CF702D.cpp
    cf724a.cpp
    cf724b.cpp
    CF743E.cpp
    chinafinalreviewb.cpp
    chinafinalreviewc.cpp
    chinafinalreviewd.cpp
    chinafinalreviewe.cpp
    chinafinalreviewf.cpp
    d1006.cpp
    d1010.cpp
    dameuva.cpp
    dinic.c[[.c
    dinic.cpp
    duipai.cpp
    failcomp.cpp
    fzu1686.cpp
    gener.cpp
    genor.cpp
    haker_zero_sum.cpp
    hdu1016.cpp
    hdu1050.cpp
    hdu1074.cpp
    hdu1181.cpp
    hdu1285.cpp
    hdu1358.cpp
    hdu3001.cpp
    hdu3001b.cpp
    hdu3091.cpp
    hdu4003.c
    hdu4003.cpp
    hdu5020.cpp
    hdu5832.cpp
    hdu5833.cpp
    hdu5974.cpp
    hdu5979.cpp
    hiho1015.cpp
    interval.cpp
    isap.cpp
    kkk.cpp
    la4670.cpp
    la5135.cpp
    mcmf.cpp
    memorytest.cpp
    mincost.cpp
    pacman.cpp
    pk1003.cpp
    pk1003b.cpp
    pk1004.c
    pk1006.cpp
    pk9.cpp
    pka.cpp
    poj1127.cpp
    poj1201duipai.cpp
    poj1222parti.cpp
    poj1267.cpp
    poj1273.cpp
    poj1273b.cpp
    poj1686.cpp
    poj1979.cpp
    poj2342.cpp
    poj2411.cpp
    poj2663.cpp
    poj2686.cpp
    "poj2763 (2).cpp"
    poj2763.cpp
    poj2932.cpp
    poj2976.cpp
    poj3155.cpp
    poj3254.cpp
    poj3311.cpp
    poj3420.cpp
    poj3426.cpp
    poj3436.c
    poj3436.cpp
    poj3683.cpp
    shu1176a.cpp
    shu1749.cpp
    shu1776.cpp
    shu1780.cpp
    shu1822.cpp
    shu1825.cpp
    shu1828.cpp
    shu1859.cpp
    shu1925.cpp
    shu2026.cpp
    shu2028.cpp
    shuce.cpp
    shucf.cpp
    shucg.c
    shucg.cpp
    spoj1182.cpp
    t.cpp
    taste.cpp
    templates_pk.cpp
    test.cpp
    test1.cpp
    test1222.cpp
    tt.cpp
    ural1057.cpp
    ural1471.cpp
    uva10815.cpp
    uva140.cpp
    uva1601.cpp
    uva816.cpp
    zam.cpp)

add_executable(SolveSet ${SOURCE_FILES})